Added some grey color to services page.

--- a/styles.css
+++ b/styles.css
@@ -506,6 +506,9 @@ footer {
   top:30%;
   right:5px;
 }
+.services {
+  background-color: #E4E4E4;
+}
 
 /**** RWD ****/
 /* Desktop & Mobile Screens Set to a Width of 600px or Below */
