--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
 	color: #cdcccc;
 }
 
-
 h1 {
   font-weight:lighter;
 	font-size: 2.25em;
@@ -182,7 +181,25 @@ height: 65px;
   height: 65px;
 }
 
-	
+.testimonials  {
+  font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
+  margin:0;
+  background-size:cover;
+  font-size: 100%;
+  line-height: 150%;
+  color: #0A0A0A;
+  margin-left: 40px;
+  width: 90%;
+
+}
+.leftimg {
+    float:left; 
+    margin: 7px 7px 7px 0;
+   }
+   .rightimg  {
+    float: right; 
+    margin: 7px 0 7px 7px; 
+   }
 	#headshot {
 		float: right;
 		padding: 4px;
