Contact us fix, footer fix.

--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@ height: 65px;
 footer {
   max-width:940px;
   margin:0px auto;
-  text-align:right;
+  text-align:center;
 }
   footer ul {
     margin:0px auto;
